# gpu_tracer

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: gpu_demo.rs  test_app.rs
src/: args.rs  error.rs  lib.rs  tracer.rs  utils.rs
src/trace/: app.rs  app_data_streams.rs  event.rs  mod.rs
src/trace/datastreams/: cpu_monitor.rs  data_stream.rs  gpu_data.rs  gpu_monitors.rs  memory_monitor.rs  mod.rs  nvidia_smi.rs  process_monitor.rs
src/trace/ui/: tabs.rs
src/trace/ui/panels/: cpu_usage.rs  gpu_memory.rs  gpu_power.rs  gpu_processes.rs  gpu_temperature.rs  gpu_utilization.rs  memory_usage.rs  mod.rs  process.rs  utils.rs
src/trace/ui/renderer/: mod.rs  render.rs
