[package]
name = "gpu-tracer"
authors = ["yarenty <yarenty@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/yarenty/gpu_tracer"
homepage = "https://github.com/yarenty/gpu_tracer"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Monitoring GPU in TUI on top of nvidia-smi."
categories = ["command-line-utilities"]
keywords = [
    "benchmark",
    "trace",
    "monitor",
    "monitoring",
    "observability"
]


[dependencies]
tokio = { version = "1", features = ["full"] }
#humantime = "2"
clap = { version = "4.5", features = ["derive", "color"]}
#poloto = "15.2"
tagger ="4"
chrono ="0.4"
log = "0.4"
env_logger = { version = "0.11", features = ["color"] }
color-eyre = "0.6"
thiserror = "2"
csv = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
itertools = "0.10"
sysinfo = "0.26"
const_format = "0.2"

termion = "4.0.3"
ratatui = "0.29"


[dev-dependencies]
criterion = "0.3"
ctrlc = "3"

[[bin]]
name = "tracer"
path = "src/tracer.rs"

[[example]]
name = "gpu_demo"
path = "examples/gpu_demo.rs"


# by default it gets 16M - debug, 3.3M - release, with this: 1.3M
[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size - try "z" 
strip = true # remove if using bloat
